(BSR)[PRO] fix: use formlayout row settings for spacing

--- a/pro/src/pages/IndividualOffer/IndividualOfferLocation/components/LocationForm/PhysicalLocationSubform/PhysicalLocationSubform.module.scss
+++ b/pro/src/pages/IndividualOffer/IndividualOfferLocation/components/LocationForm/PhysicalLocationSubform/PhysicalLocationSubform.module.scss
@@ -14,11 +14,3 @@
 .location-field {
   margin-bottom: 0;
 }
-
-.other-address-wrapper {
-  margin-top: var(--size-spacing-l);
-}
-
-.manual-address-button {
-  margin-top: var(--size-spacing-l);
-}
